# C_code

bash_ep3De_v1.0/: example.txt  shellscript.sh
functions/: Makefile  cmake_install.cmake
scripts/old_matlab_scripts/: Exp2b.m  export.m  meSetup.m
scripts/setting_Exp2b/: Exp2b.m  Exp2b_epsEqv_1.eps  Exp2b_u_1.eps  bcs.txt  cohp.txt  compileExp2b.m  cpu  cpu.out  display.py  ep23De_cpu  epII.txt  export.m  fun.py  init.py  init.sh  lp.txt  main.jl  meSetup.m  mp.txt  mpSetup.m  mpSetupGRFS.m  param.txt  phip.txt  phys.txt  postprocessing.m  run.sh  sig.txt  test.txt  up.txt  vol.txt  xn.txt  xp.txt
scripts/setting_Exp2b/scripts/: init.jl
scripts/setting_Exp2b/src/: functions.jl  types.jl
src/: CMakeLists.txt  I_O.h  commit.sh  cpu_functions.asv  cpu_functions.h  cpu_main.c  macros.h  main.c  makefile  run.sh  shellscript.sh  struct_mesh_mp_mat.h
src/functions/: CFL.c  CMakeLists.txt  DM_BC.c  DPPlast.c  FLIP.c  NdN.c  accum.c  basis.c  elast.c  getG.c  init.c  loadFloat.c  loadInt.c  saveData.c  solve.c  strains.c  topol.c  volLock.c  whichType.c
src/include/: CFL.h  DM_BC.h  DPPlast.h  I_O.h  NdN.h  accum.h  basis.h  elast.h  functions.h  getG.h  init.h  io.h  loadFloat.h  loadInt.h  macros.h  saveData.h  solve.h  strains.h  topol.h  type_t.h  volLock.h  whichType.h
